--- a/code/fwp/fwp.cabal
+++ b/code/fwp/fwp.cabal
@@ -61,6 +61,7 @@ test-suite fwp-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      OpTests
       Paths_fwp
   autogen-modules:
       Paths_fwp
