--- a/code/fwp/fwp.cabal
+++ b/code/fwp/fwp.cabal
@@ -6,7 +6,7 @@ cabal-version: 2.2
 
 name:           fwp
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/snowmang1/fwp#readme>
+description:    Please see the README on GitHub at <https://github.com/snowmang1/Fast-Weight-Programmer#readme>
 homepage:       https://github.com/snowmang1/fwp#readme
 bug-reports:    https://github.com/snowmang1/fwp/issues
 author:         Evan Drake
