added king functionality
Signed-off-by: Evan Drake <evanmdrake@icloud.com>

--- a/code/fwp/fwp.cabal
+++ b/code/fwp/fwp.cabal
@@ -25,7 +25,9 @@ source-repository head
 
 library
   exposed-modules:
+      Board
       Lib
+      Slow
   other-modules:
       Paths_fwp
   autogen-modules:
