--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -7,15 +7,15 @@ on:
     branches: ["trunk"]
 
 jobs:
-  build:
-
+  setup:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
       - name: Stack setup
         # run: sudo apt-get install g++ gcc libc6-dev libffi-dev libgmp-dev make xz-utils zlib1g-dev git gnupg netbase
-        run: curl -sSL https://get.haskellstack.org/ | sh
+        run: stack upgrade
 
+  test:
       - name: Test
         run: stack test
