added dir specific task
Signed-off-by: Evan Drake <evanmdrake@icloud.com>

--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -15,6 +15,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          path: 'code/fwp'
       - name: Stack setup
         run: stack upgrade
       - name: Test
