added dir specific task
Signed-off-by: Evan Drake <evanmdrake@icloud.com>

--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          path: 'code/fwp'
+          path: 'code/fwp/'
       - name: Stack setup
         run: stack upgrade
       - name: Test
