added stack work
Signed-off-by: Evan Drake <evanmdrake@icloud.com>

--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Stack setup
         run: stack upgrade
       - name: Test
-        run: cd code/fwp && ls
+        run: cd code/fwp && stack test
