--- a/code/fwp/fwp.cabal
+++ b/code/fwp/fwp.cabal
@@ -63,7 +63,8 @@ test-suite fwp-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      OpTests
+      MvTests
+      SlowTests
       Paths_fwp
   autogen-modules:
       Paths_fwp
